fixed header logo and encap href overlap

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
 }
 
 #logomain img:hover {
-    transform: scale(1.3);
+    transform: scale(1.1);
 }
 
 nav ul {
